--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: cyan
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1.clock-h1 {
+  font-size: 60px;
+  font-weight: 800;
+  margin-top: 10%;
+  margin-left: 18%;
+  background: white;
+  /* height: 150px; */
+  text-align: center;
+  padding: 96px;
+  width: 50%;
+  border-radius: 20px;
+}
+
+.clock-title {
+  font-size: 60px;
+  font-weight: 800;
+  margin-top: 5%;
+  margin-left: 24%;
+  background: white;
+  text-align: center;
+  width: 50%;
+  border-radius: 20px;
 }
